[gd_scene load_steps=9 format=3 uid="uid://bi6ss5gpufc8o"]

[ext_resource type="Script" path="res://Scripts/game_over_menu.gd" id="1_760aq"]
[ext_resource type="Texture2D" uid="uid://d0fnok8k7hcs" path="res://Assets/Menu.png" id="2_xssj6"]
[ext_resource type="FontFile" uid="uid://cqgyar8efma25" path="res://Assets/font/FlappyBird.ttf" id="3_2mbl0"]
[ext_resource type="Texture2D" uid="uid://upp8paco6vsm" path="res://Assets/StartButton.png" id="4_uk36s"]

[sub_resource type="Animation" id="Animation_1i2ql"]
resource_name = "Move"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 600), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_f3hbd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_12hf5"]
_data = {
"Move": SubResource("Animation_1i2ql"),
"RESET": SubResource("Animation_f3hbd")
}

[sub_resource type="LabelSettings" id="LabelSettings_fke88"]
font = ExtResource("3_2mbl0")
font_size = 32
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="GameOverMenu" type="Node2D"]
script = ExtResource("1_760aq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_12hf5")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(15, 15)
texture = ExtResource("2_xssj6")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="score" type="Label" parent="."]
z_index = 19
texture_filter = 1
offset_left = 9.0
offset_top = -476.0
offset_right = 49.0
offset_bottom = -430.0
grow_vertical = 2
scale = Vector2(10, 10)
size_flags_horizontal = 6
size_flags_vertical = 6
text = "0
"
label_settings = SubResource("LabelSettings_fke88")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HighScore" type="Label" parent="."]
z_index = 19
texture_filter = 1
offset_left = 12.0
offset_top = -261.0
offset_right = 52.0
offset_bottom = -215.0
grow_vertical = 2
scale = Vector2(10, 10)
size_flags_horizontal = 6
size_flags_vertical = 6
text = "0
"
label_settings = SubResource("LabelSettings_fke88")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="scorelabel" type="Label" parent="."]
z_index = 19
texture_filter = 1
offset_left = -417.0
offset_top = -342.0
offset_right = -363.0
offset_bottom = -316.0
grow_vertical = 2
scale = Vector2(8, 8)
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Score
"
label_settings = SubResource("LabelSettings_fke88")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="scorelabel2" type="Label" parent="."]
z_index = 19
texture_filter = 1
offset_left = -399.0
offset_top = -135.0
offset_right = -354.0
offset_bottom = -109.0
grow_vertical = 2
scale = Vector2(8, 8)
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Best
"
label_settings = SubResource("LabelSettings_fke88")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Button" type="Button" parent="."]
offset_left = -204.0
offset_top = 185.0
offset_right = 211.0
offset_bottom = 343.0
icon = ExtResource("4_uk36s")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
